# dojo5-datasheet-fun

./: .gitmodules  CMakeLists.txt  README.md  SMC_40CR.c  SMC_40CR.h  SMC_40CR_ReferenceManual.md  build.sh  logger.c  startup.c  startup.h  test_gtests.cpp  test_main.c
tests/: CALL_ORDER_TEST.cpp  UNIT_TESTS.cpp  common.h
utils/: logger.h  timer_mock.c  timer_real.c
